fix: markdown dark mode note tip

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -105,7 +105,7 @@
     .mdx-thead, .mdx-tbody .mdx-tr:not(:last-child) { @apply border-b border-slate-600/20; }
   }
 
-  .note {
+  .admonition {
     @apply bg-slate-600/20;
     &::before { @apply bg-zinc-900; }
   }
